==> iNavFlight/inav/lib/main/ChibiOS/os/hal/ports/SAMA/LLD/I2Cv1/hal_i2c_lld.c <==
#include "hal.h"
#define TWI_CLK_OFFSET                      3
#define TWI_ADDR_MASK_10                    0x380
#define TWI_ADDR_10_DADR_MASK               0x78
#define TWI_ADDR_10_IADR_MASK               0xFF
#define TWI_INTERNAL_ADDR_MASK              0xFF
#define TWI_ERROR_MASK                      (TWI_SR_OVRE | TWI_SR_UNRE |      \
                                             TWI_SR_NACK | TWI_SR_ARBLST |    \
                                             TWI_SR_TOUT | TWI_SR_PECERR)
#define ROUND_INT_DIV(n,d)                  (((n) + ((d)-1)) / (d))
#define twiEnableWP(i2cp) {                                                   \
  i2cp->TWI_WPMR = TWI_WPMR_WPKEY_PASSWD | TWI_WPMR_WPEN;                     \
}
#define twiDisableWP(i2cp) {                                                  \
  i2cp->TWI_WPMR = TWI_WPMR_WPKEY_PASSWD;                                     \
}

void i2c_lld_init(void) {

#if SAMA_I2C_USE_TWIHS0
#if SAMA_HAL_IS_SECURE
  mtxConfigPeriphSecurity(MATRIX1, ID_TWIHS0, SECURE_PER);
#endif /* SAMA_HAL_IS_SECURE */
  /* Driver initialization.*/
  i2cObjectInit(&I2CD0);
  I2CD0.thread    = NULL;
  I2CD0.i2c       = TWIHS0;
  I2CD0.dmarx     = NULL;
  I2CD0.dmatx     = NULL;
  I2CD0.rxdmamode = XDMAC_CC_TYPE_PER_TRAN |
                    XDMAC_CC_MBSIZE_SIXTEEN |
                    XDMAC_CC_DSYNC_PER2MEM |
                    XDMAC_CC_PROT_SEC |
                    XDMAC_CC_CSIZE_CHK_1 |
                    XDMAC_CC_DWIDTH_BYTE |
                    XDMAC_CC_SIF_AHB_IF1 |
                    XDMAC_CC_DIF_AHB_IF0 |
                    XDMAC_CC_SAM_FIXED_AM |
                    XDMAC_CC_DAM_INCREMENTED_AM |
                    XDMAC_CC_PERID(PERID_TWIHS0_RX);
  I2CD0.txdmamode = XDMAC_CC_TYPE_PER_TRAN |
                    XDMAC_CC_MBSIZE_SIXTEEN |
                    XDMAC_CC_DSYNC_MEM2PER |
                    XDMAC_CC_PROT_SEC |
                    XDMAC_CC_CSIZE_CHK_1 |
                    XDMAC_CC_DWIDTH_BYTE |
                    XDMAC_CC_SIF_AHB_IF0 |
                    XDMAC_CC_DIF_AHB_IF1 |
                    XDMAC_CC_SAM_INCREMENTED_AM |
                    XDMAC_CC_DAM_FIXED_AM |
                    XDMAC_CC_PERID(PERID_TWIHS0_TX);
#endif /* SAMA_I2C_USE_TWIHS0 */

#if SAMA_I2C_USE_TWIHS1
#if SAMA_HAL_IS_SECURE
  mtxConfigPeriphSecurity(MATRIX1, ID_TWIHS1, SECURE_PER);
#endif /* SAMA_HAL_IS_SECURE */
  /* Driver initialization.*/
  i2cObjectInit(&I2CD1);
  I2CD1.thread    = NULL;
  I2CD1.i2c       = TWIHS1;
  I2CD1.dmarx     = NULL;
  I2CD1.dmatx     = NULL;
  I2CD1.rxdmamode = XDMAC_CC_TYPE_PER_TRAN |
                    XDMAC_CC_MBSIZE_SIXTEEN |
                    XDMAC_CC_DSYNC_PER2MEM |
                    XDMAC_CC_PROT_SEC |
                    XDMAC_CC_CSIZE_CHK_1 |
                    XDMAC_CC_DWIDTH_BYTE |
                    XDMAC_CC_SIF_AHB_IF1 |
                    XDMAC_CC_DIF_AHB_IF0 |
                    XDMAC_CC_SAM_FIXED_AM |
                    XDMAC_CC_DAM_INCREMENTED_AM |
                    XDMAC_CC_PERID(PERID_TWIHS1_RX);
  I2CD1.txdmamode = XDMAC_CC_TYPE_PER_TRAN |
                    XDMAC_CC_MBSIZE_SIXTEEN |
                    XDMAC_CC_DSYNC_MEM2PER |
                    XDMAC_CC_PROT_SEC |
                    XDMAC_CC_CSIZE_CHK_1 |
                    XDMAC_CC_DWIDTH_BYTE |
                    XDMAC_CC_SIF_AHB_IF0 |
                    XDMAC_CC_DIF_AHB_IF1 |
                    XDMAC_CC_SAM_INCREMENTED_AM |
                    XDMAC_CC_DAM_FIXED_AM |
                    XDMAC_CC_PERID(PERID_TWIHS1_TX);
#endif /* SAMA_I2C_USE_TWIHS1 */
}

void i2c_lld_start(I2CDriver *i2cp) {

  uint32_t ck_div, clh_div, hold;

  /* If in stopped state then enables the I2C and DMA clocks.*/
  if (i2cp->state == I2C_STOP) {

#if SAMA_I2C_USE_TWIHS0
    if (&I2CD0 == i2cp) {

      i2cp->dmarx = dmaChannelAllocate(SAMA_I2C_TWIHS0_DMA_IRQ_PRIORITY,
                                       (sama_dmaisr_t)i2c_lld_serve_rx_interrupt,
                                       (void *)i2cp);
      osalDbgAssert(i2cp->dmarx != NULL, "no channel allocated");

      i2cp->dmatx = dmaChannelAllocate(SAMA_I2C_TWIHS0_DMA_IRQ_PRIORITY,
                                       (sama_dmaisr_t)i2c_lld_serve_tx_interrupt,
                                       (void *)i2cp);
      osalDbgAssert(i2cp->dmatx != NULL, "no channel allocated");

      pmcEnableTWIHS0();
      /* To prevent spurious interrupt */
      aicSetIntSourceType(ID_TWIHS0, EXT_NEGATIVE_EDGE);
      aicSetSourcePriority(ID_TWIHS0, SAMA_I2C_TWIHS0_IRQ_PRIORITY);
      aicSetSourceHandler(ID_TWIHS0, SAMA_TWIHS0_HANDLER);
      aicEnableInt(ID_TWIHS0);
    }
#endif /* SAMA_I2C_USE_TWIHS0 */

#if SAMA_I2C_USE_TWIHS1
    if (&I2CD1 == i2cp) {

      i2cp->dmarx = dmaChannelAllocate(SAMA_I2C_TWIHS1_DMA_IRQ_PRIORITY,
                                       (sama_dmaisr_t)i2c_lld_serve_rx_interrupt,
                                       (void *)i2cp);
      osalDbgAssert(i2cp->dmarx != NULL, "no channel allocated");

      i2cp->dmatx = dmaChannelAllocate(SAMA_I2C_TWIHS1_DMA_IRQ_PRIORITY,
                                       (sama_dmaisr_t)i2c_lld_serve_tx_interrupt,
                                       (void *)i2cp);
      osalDbgAssert(i2cp->dmatx != NULL, "no channel allocated");

      pmcEnableTWIHS1();
      /* To prevent spurious interrupt */
      aicSetIntSourceType(ID_TWIHS1, EXT_NEGATIVE_EDGE);
      aicSetSourcePriority(ID_TWIHS1, SAMA_I2C_TWIHS1_IRQ_PRIORITY);
      aicSetSourceHandler(ID_TWIHS1, SAMA_TWIHS1_HANDLER);
      aicEnableInt(ID_TWIHS1);
    }
#endif /* SAMA_I2C_USE_TWIHS1 */
  }

  /* Set mode */
  dmaChannelSetMode(i2cp->dmarx, i2cp->rxdmamode);
  dmaChannelSetSource(i2cp->dmarx, &i2cp->i2c->TWI_RHR);

  dmaChannelSetMode(i2cp->dmatx, i2cp->txdmamode);
  dmaChannelSetDestination(i2cp->dmatx, &i2cp->i2c->TWI_THR);

  /* Disable write protection. */
  twiDisableWP(i2cp->i2c);

  /* TWI software reset */
  i2cp->i2c->TWI_CR = TWI_CR_SWRST;

  /* TWI set operation mode. */
  i2c_lld_set_opmode(i2cp);

  /* Configure dummy slave address */
  i2cp->i2c->TWI_MMR = 0;

  /* Compute clock */
  for (ck_div = 0; ck_div < 7; ck_div++) {
    clh_div = ((SAMA_TWIHSxCLK / i2cp->config->clock_speed) - 2 * (TWI_CLK_OFFSET)) >> ck_div;
    if (clh_div <= 511) {
      break;
    }
  }

  /* Compute holding time (I2C spec requires 300ns) */
  hold = TWI_CWGR_HOLD(ROUND_INT_DIV((uint32_t)(0.3 * SAMA_TWIHSxCLK), 1000000) - 3);

  /* Configure clock */
  i2cp->i2c->TWI_CWGR = TWI_CWGR_CKDIV(ck_div) |
                        TWI_CWGR_CHDIV(clh_div >> 1) |
                        TWI_CWGR_CLDIV(clh_div >> 1) |
                        hold;

  /* Clear status flag */
  i2cp->i2c->TWI_SR;

  /* Enable Interrupt. */
  i2cp->i2c->TWI_IER = TWI_ERROR_MASK;

  /* Set master mode */
  i2cp->i2c->TWI_CR = TWI_CR_SVDIS;
  i2cp->i2c->TWI_CR = TWI_CR_MSEN;

  /* Enable write protection. */
  twiEnableWP(i2cp->i2c);
}

void i2c_lld_stop(I2CDriver *i2cp) {

  /* If not in stopped state then disables the I2C clock.*/
  if (i2cp->state != I2C_STOP) {

    /* Disable write protection. */
    twiDisableWP(i2cp->i2c);

    /* I2C disable.*/

    /* Disable interrupts. */
    i2cp->i2c->TWI_IDR = TWI_ERROR_MASK;

    /* TWI software reset. */
    i2cp->i2c->TWI_CR = TWI_CR_SWRST;
    i2cp->i2c->TWI_MMR = 0;

    /* DMA channel release. */
    dmaChannelRelease(i2cp->dmatx);
    dmaChannelRelease(i2cp->dmarx);

#if SAMA_I2C_USE_TWIHS0
    if (&I2CD0 == i2cp) {
      pmcDisableTWIHS0();
    }
#endif

#if SAMA_I2C_USE_TWIHS1
    if (&I2CD1 == i2cp) {
      pmcDisableTWIHS1();
    }
#endif

    /* Enable write protection. */
    twiEnableWP(i2cp->i2c);
  }

  i2cp->txbuf = NULL;
  i2cp->rxbuf = NULL;
  i2cp->txbytes = 0;
  i2cp->rxbytes = 0;
}
